--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ img {
     border-radius: 50px;
     cursor: pointer;
     transition: 0.3s all ease;
+    font-family: var(--body-font);
 }
 
 .btn-primary {
@@ -1600,14 +1601,12 @@ img {
     /* Home Page CSS */
     .banner-swiper .swiper-button-prev,
     .banner-swiper .swiper-button-next {
-        display: none;
+        top: auto;
+        bottom: 50px;
     }
     .banner-text {
         justify-content: flex-end;
-        padding-bottom: 100px;
-    }
-    .banner-swiper .swiper-pagination-bullets.swiper-pagination-horizontal {
-        display: none;
+        padding-bottom: 160px;
     }
     .flex-content {
         flex-direction: column;
@@ -1701,7 +1700,7 @@ img {
         width: 230px;
     }
     .banner-text {
-        padding-bottom: 34px;
+        padding-bottom: 98px;
     }
     .btn-menu {
         width: 40px;
@@ -1724,7 +1723,22 @@ img {
     .banner-text h1 {
         font-size: 46px;
         line-height: 52px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+    }
+    .banner-swiper .swiper-pagination-bullets.swiper-pagination-horizontal {
+        bottom: 32px;
+    }
+    .banner-swiper .swiper-button-prev,
+    .banner-swiper .swiper-button-next {
+        bottom: 32px;
+        width: 13.46px;
+        height: 21.76px;
+        background-repeat: no-repeat;
+    }
+    .banner-swiper .swiper-pagination-bullet {
+        width: 10.46px;
+        height: 10.46px;
+        margin: 0 5px !important;
     }
     .btn-lg {
         font-size: 13px;
@@ -1737,6 +1751,7 @@ img {
     .side-menu {
         width: 100%;
         height: 498px;
+        background-color: var(--secondary);
         padding: 32px 25px 69px 25px;
     }
     .navbar a {
